// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Logo> should present large on the top of the queue list page 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  margin: 3% 0;
  width: 180px;
  height: auto;
}

<div>
  <div
    class="c0"
  >
    <div
      class="link"
    >
      <img
        class="c1"
        src="[object Object]"
      />
    </div>
  </div>
</div>
`;

exports[`<Logo> should present medium on the top of the queue list page 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  margin: 3% 0;
  width: 150px;
  height: auto;
}

<div>
  <div
    class="c0"
  >
    <div
      class="link"
    >
      <img
        class="c1"
        src="[object Object]"
      />
    </div>
  </div>
</div>
`;

exports[`<Logo> should present small on the top of the queue list page 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  margin: 3% 0;
  width: 120px;
  height: 60px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="link"
    >
      <img
        class="c1"
        src="[object Object]"
      />
    </div>
  </div>
</div>
`;
